# raspicat_navigation

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  plugin_navigation.xml  plugin_rviz.xml
.github/: Dockerfile-local.ci  Dockerfile.build-ci  Dockerfile.ci  Dockerfile.environment-ci  environment_ci.sh  local_Dockerfile.ci
.github/workflows/: raspicat_navigation-ci.yaml
config/csv/: waypoint.csv  waypoint_19.csv  waypoint_sim.csv  waypoint_tsudanuma.csv  waypoint_tsukuba.csv
config/maps/: gmapping_low.yaml  map_tudanuma.yaml  sim_map.yaml  tsukuba.yaml
config/param/: amcl.yaml  costmap_common_params_raspicat.yaml  dwa_local_planner_params_raspicat.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  waypoint_navigation.yaml
config/raspicat_speak/: speak_list.yaml
config/rviz/: raspicat_navigation.rviz  raspicat_navigation_2d.rviz  raspicat_navigation_3d.rviz  raspicat_navigation_vsim.rviz
config/urdf/: raspicat.urdf.xacro
config/waypoint/: waypoint.yaml
config/world/: map2gazebo.world
include/raspicat_navigation/: BaseWaypointParamChange.hpp  BaseWaypointRviz.hpp  BaseWaypointServer.hpp  CmdVelSmoother.hpp  MclKidnappingMeasures.hpp  SlopeObstacleAvoidance.hpp  WaypointNav.hpp  WaypointNavHelperPlugin.hpp  WaypointRviz.hpp  WaypointServer.hpp
launch/: amcl.launch  emcl.launch  mcl_ros.launch  move_base.launch  raspicat_bringup.launch  raspicat_navigation.launch  raspicat_navigation_sim.launch  raspicat_waypoint_navigation.launch  start_motors.launch  waypoint_set.launch
launch/include/: description.launch.xml
maps/: map.yaml
param/: costmap_common_params_burger.yaml  costmap_common_params_raspicat.yaml  dwa_local_planner_params_burger.yaml  dwa_local_planner_params_raspicat.yaml  global_costmap_params.yaml  local_costmap_params.yaml
raspicat_map2gazebo/: CMakeLists.txt  package.xml
raspicat_map2gazebo/config/map2gazebo/: defaults.yaml
raspicat_map2gazebo/config/map2gazebo/models/map_hybrid_35.688987_140.02092_100_100/: model.config
raspicat_map2gazebo/config/map2gazebo/models/map_hybrid_35.688987_140.02092_100_100/materials/scripts/: map_tiles.material
raspicat_map2gazebo/config/map2gazebo/models/tsudanuma_2_19/: model.config
raspicat_map2gazebo/config/map2gazebo/world/: tsudanuma.world  tsudanuma_2_19.world  tsukuba.world
raspicat_map2gazebo/config/models/map_satellite_36.0835594_140.07664_400_400/materials/scripts/: map_tiles.material
raspicat_map2gazebo/config/models/tsudanuma_2_19/: model.sdf
raspicat_map2gazebo/config/models/tsukuba/: model.config
raspicat_map2gazebo/config/world/: tsudanuma.world  tsudanuma_2_19.world
raspicat_map2gazebo/launch/: check_gazebo_world.launch  map2gazebo.launch  raspicat_navigation_vsim.launch  raspicat_tsudanuma_2_19_world.launch  raspicat_tsudanuma_world.launch  raspicat_tsukuba_world.launch
raspicat_map2gazebo/scripts/: map2gazebo_create_world_launch.sh
raspicat_navigation/: CMakeLists.txt  package.xml
raspicat_navigation_msgs/: CMakeLists.txt  README.md  package.xml
raspicat_navigation_msgs/msg/: Flag.msg  Property.msg  Waypoint.msg  WaypointNavStatus.msg  Waypoints.msg
raspicat_navigation_msgs/msg/function/: slope.msg
raspicat_navigation_rviz_plugin/: CMakeLists.txt  package.xml  plugin.xml
raspicat_navigation_rviz_plugin/src/: waypoint_pose_tool.cpp
raspicat_navigation_rviz_plugin/src/rviz/: waypoint_pose_tool.h
raspicat_waypoint_navigation/: CMakeLists.txt  package.xml  plugin.xml
raspicat_waypoint_navigation/config/ekf_localization/: ekf_localization.yaml
raspicat_waypoint_navigation/config/maps/for_move_base/: map_tsudanuma.yaml  map_tsudanuma_2_19.yaml
raspicat_waypoint_navigation/config/maps/tsukuba/: map_tsukuba.yaml
raspicat_waypoint_navigation/config/param/: amcl.yaml  costmap_common_params.yaml  emcl2.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  obstacle_detector.yaml
raspicat_waypoint_navigation/config/raspicat_speak/: speak_list.yaml  voice_config.yaml
raspicat_waypoint_navigation/config/rviz/: raspicat_waypoint_navigation.rviz  waypoint.rviz
raspicat_waypoint_navigation/config/waypoint/: route.yaml  waypoint.yaml  waypoint_tsudanuma_2_19.yaml  waypoint_tsukuba.yaml
raspicat_waypoint_navigation/include/raspicat_navigation/: BaseWaypointParamChange.hpp  BaseWaypointRviz.hpp  WaypointNav.hpp  WaypointNavHelperPlugin.hpp
raspicat_waypoint_navigation/include/raspicat_waypoint_navigation/: BaseWaypointServer.hpp  ClearCostMap.hpp  SlopeObstacleAvoidance.hpp  WaypointNav.hpp  WaypointRviz.hpp  WaypointServer.hpp
raspicat_waypoint_navigation/launch/: amcl.launch  emcl.launch  emcl2.launch  mcl_ros.launch  move_base.launch  raspicat_navigation.launch  raspicat_raspi_only_navigation.launch
raspicat_waypoint_navigation/launch/sim/: raspicat_navigation_vsim.launch
raspicat_waypoint_navigation/launch/tools/: waypoint_set.launch  waypoint_view.launch
raspicat_waypoint_navigation/scripts/: motor_start.py  waypoint_set_controller.py
raspicat_waypoint_navigation/src/: ClearCostMap.cpp  SlopeObstacleAvoidance.cpp  WaypointNav.cpp  WaypointNav_node.cpp  WaypointParamChange.cpp  WaypointRviz.cpp  WaypointServer.cpp
raspicat_waypoint_navigation/src/tools/: waypoint_set.cpp  waypoint_view.cpp
raspicat_waypoint_navigation/test/: ci_test-local.sh  ci_test.launch  ci_test.sh  waypoint.yaml
rviz/: raspicat_navigation.rviz
script/: start.py  waypoint_controller_rviz
scripts/: map2gazebo_rename_stl_file.sh  motor_start.py  waypoint_controller_rviz.py  waypoint_passed_play_sound.py  waypoint_set_controller.py
src/: CmdVelSmoother.cpp  MclKidnappingMeasures.cpp  SlopeObstacleAvoidance.cpp  WaypointNav.cpp  WaypointNav_node.cpp  WaypointParamChange.cpp  WaypointRviz.cpp  WaypointServer.cpp  check_position.py  scanmask.py  start_order_waypoint_navigation.cpp  waypoint_navigation.cpp  waypoint_rviz_set.cpp  waypoint_view.cpp
test/: ci_test-local.sh  ci_test.launch  ci_test.sh  waypoint.yaml
urdf/: frames.gv  raspicat.urdf.xacro
(+47 files in other folders)
