<?xml version="1.0"?>
<package format="2">
  <name>raspicat_navigation</name>
  <version>0.0.0</version>
  <description>The raspicat_setup_scripts meta package</description>

  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_map2gazebo</exec_depend>
  <exec_depend>raspicat_navigation_msgs</exec_depend>
  <exec_depend>raspicat_navigation_rviz_plugin</exec_depend>
  <exec_depend>raspicat_waypoint_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>