<?xml version="1.0"?>
<package format="2">
  <name>raspicat_navigation_msgs</name>
  <version>0.0.0</version>
  <description>
  abcd
  </description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>