<?xml version="1.0"?>
<package format="2">
  <name>raspicat_navigation_rviz_plugin</name>
  <version>0.0.0</version>
  <description>
    This is a navigation system developed for Raspberry Pi Cat. 
  </description>
  <license>Apache 2.0</license>
  <author>Tatsuhiro Ikebe</author>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>

  <build_export_depend>pluginlib</build_export_depend>
  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>